# ESP32_Soil_OTA

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  ESP32_Soil_OTA.h  ESP32_Soil_OTA.ino  NetworkFunctions.h  NetworkFunctions.ino  README.md
